--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <label for="password" class="form-label">Mật khẩu</label>
               <div class="anhien">
                 <input id="password" name="password" type="password" placeholder="Nhập mật khẩu" class="form-control">
-                <input id="toggleBtn" type="button" onclick="togglePassword()" value="Hiện" class="form-control">
+                <input id="toggleBtn" type="button" onclick="togglePassword()" value="Hiện" class="form-control" style="cursor: pointer;">
               </div>
             <span class="form-message"></span>
           </div>
