--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       
           <div class="form-group">
             <label for="fullname" class="form-label">Họ và tên
-              <i class="fa-solid fa-file-signature"></i>
+              <i class="fa-solid fa-file-signature"></i> :
             </label>
             <input id="fullname" name="fullname" type="text" placeholder="VD: Trần Quốc Đạt" class="form-control">
             <span class="form-message"></span>
           </div>
         <div class="form-group">
             <label for="gender" class="form-label">Giới tính
-              <i class="fa-solid fa-transgender"></i>
+              <i class="fa-solid fa-transgender"></i> :
             </label>
             <div class="gioi-tinh">
               <div>
@@ -55,7 +55,7 @@
         </div>
          <div class="form-group">
             <label for="birthday" class="form-label">Ngày sinh
-              <i class="fa-solid fa-calendar-days"></i>
+              <i class="fa-solid fa-calendar-days"></i> :
             </label>
             <input type="date" id="birthday" name="birthday" class="form-control">
             <span class="form-message"></span>
@@ -70,14 +70,14 @@
           </div>
           <div class="form-group">
             <label for="phone" class="form-label">Số điện thoại
-              <i class="fa-solid fa-phone"></i>
+              <i class="fa-solid fa-phone"></i> :
             </label>
             <input type="tel" name="phone" id="phone" placeholder="VD: 0705589***" class="form-control">
             <span class="form-message"></span>
           </div>
           <div class="form-group">
-            <label for="proviced" class="form-label">Quê Quán
-              <i class="fa-solid fa-location-dot"></i>
+            <label for="proviced" class="form-label">Quê Quán 
+              <i class="fa-solid fa-location-dot"></i> :
             </label>
             <div class="form-group">
             <select class="form-select form-select-sm mb-3 form-control" id="city" name="city" aria-label=".form-select-sm">
@@ -102,14 +102,14 @@
       
             <div class="form-group">
               <label for="avarta" class="form-label">Ảnh đại diện
-                <i class="fa-regular fa-image"></i>
+                <i class="fa-regular fa-image"></i> :
               </label>
               <input id="avarta" name="avarta" type="file" class="form-control">
               <span class="form-message"></span>
             </div>
           <div class="form-group">
             <label for="password" class="form-label">Mật khẩu
-              <i class="fa-solid fa-lock"></i>
+              <i class="fa-solid fa-lock"></i> :
             </label>
               <div class="anhien">
                 <input id="password" name="password" type="password" placeholder="Nhập mật khẩu" class="form-control">
@@ -120,7 +120,7 @@
         </div>
           <div class="form-group">
             <label for="password_confirmation" class="form-label">Nhập lại mật khẩu 
-              <i class="fa-sharp fa-solid fa-rotate-right"></i>
+              <i class="fa-sharp fa-solid fa-rotate-right"></i> :
             </label>
             <input id="password_confirmation" name="password_confirmation" placeholder="Nhập lại mật khẩu" type="password" class="form-control">
             <span class="form-message"></span>
@@ -128,7 +128,7 @@
 
           <div class="form-group">
             <label for="textbox" class="form-label">Comment
-              <i class="fa-solid fa-comment"></i>
+              <i class="fa-solid fa-comment"></i> :
             </label>
             <textarea name="textbox" id="textbox" cols="40" rows="20" style="height: 200px;" class="form-control" placeholder="Nhấp vào để viết ❤️ "></textarea>
             <span class="form-message"></span>
