--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <div class="main">
 
         <form action="" method="POST" class="form" id="form-1">
+            <img src="./lgo.png" alt="" style="width: 212px; height: 180px;">
           <h3 class="heading">Form khảo sát</h3>
-          <h6 class="heading" style="font-weight: 450; font-size: 1.9rem;">Xin hãy điền và nhận xét</h6>
+          <h6 class="heading" style="font-weight: 450; font-size: 1.9rem;">Hãy điền và nhận xét</h6>
       
           <p class="desc">First project on front-end programmed with HTML, CSS and Javascript by  Đạt ❤️</p>
       
@@ -63,7 +64,7 @@
           <div class="form-group">
             <label for="email" class="form-label">
               Email
-              <i class="fa-solid fa-envelope"></i>
+              <i class="fa-solid fa-envelope"></i> :
             </label>
             <input id="email" name="email" type="text" placeholder="VD: dat@gmail.com" class="form-control">
             <span class="form-message"></span>
