--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           </div>
           
           <button class="form-submit" id="create">
-            Gửi phản hồi
+            <a href="https://tdatbkpro.github.io/datbk_pro/" target="_blank" style="text-decoration: none; color: #fff;"> Gửi phản hồi</a>
             <i class="fa-regular fa-paper-plane"></i>
           </button>
 
