--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form validation</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./add.css">
     <link rel="stylesheet" href="./fonts/fontawesome-free-6.4.0-web/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 </head>
 <body>
     <div class="main">
@@ -118,10 +120,10 @@
             <label for="password" class="form-label">Mật khẩu
               <i class="fa-solid fa-lock"></i> :
             </label>
-              <div class="anhien">
-                <input id="password" name="password" type="password" placeholder="Nhập mật khẩu" class="form-control">
-                <input id="toggleBtn" type="button" onclick="togglePassword()" value="Hiện" class="form-control" style="cursor: pointer;">
-              </div>
+            <span class="form-control">
+              <input class="password" id="password" name="password" type="password" placeholder="Nhập mật khẩu" autocomplete="current-password" required="">
+              <i class="far fa-eye" id="togglePassword" style="cursor: pointer; margin-left: 130px;"></i>
+            </span>
             <span class="form-message"></span>
           </div>
         </div>
