--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </label>
             <span class="form-control">
               <input class="password" id="password" name="password" type="password" placeholder="Nhập mật khẩu" autocomplete="current-password" required="">
-              <i class="far fa-eye" id="togglePassword" style="cursor: pointer; margin-left: 162px;"></i>
+              <i class="far fa-eye" id="togglePassword" style="margin-left: 10px;"></i>
             </span>
             <span class="form-message"></span>
           </div>
